<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ApkExport</string>
    <string name="text_avaliableroom">存储剩余空间：</string>
    <string name="action_search">搜索</string>
    <string name="action_sort">排序</string>
    <string name="action_about">关于</string>
    <string name="action_settings">设置</string>
    <string name="action_editpath">导出路径</string>
    <string name="action_filename">导出规则</string>
    <string name="action_sharemode">分享模式</string>
    <string name="action_confirm">确定</string>
    <string name="action_cancel">取消</string>
    <string name="activity_main_wait">请等待</string>
    <string name="activity_main_exception_head">以下应用未成功导出，错误信息如下：\n\n</string>
    <string name="activity_main_exception_end">\n可能的异常包括存储空间不足，源文件被删除，写入文件名不合法，或者没有写入权限等。</string>
    <string name="activity_main_share_title">分享应用</string>
    <string name="activity_main_stop">停止</string>
    <string name="activity_main_extracting_title">正在导出</string>
    <string name="activity_main_complete">应用已导出至</string>
    <string name="activity_main_duplicate_title">存在重名文件</string>
    <string name="activity_main_duplicate_message">存在下列重名文件，是否覆盖？</string>
    <string name="activity_main_multiselect_att_head">已选择</string>
    <string name="activity_main_multiselect_att_item">项</string>
    <string name="activity_main_multiselect_att_end">共计大小：</string>
    <string name="activity_main_extract_multi_additional_title">附加选项</string>
    <string name="share_mode_direct">直接分享</string>
    <string name="share_mode_direct_att">直接分享应用源APK文件，无需导出，但不能自定义文件名，不能分享打包有Data或Obb的zip文件</string>
    <string name="share_mode_after_extract">导出后分享</string>
    <string name="share_mode_after_extract_att">先按照命名规则导出到指定的路径再分享导出后的文件，会占用存储空间</string>
    <string name="action_folderselector_newfolder">新建文件夹</string>
    <string name="action_folderselector_sort_ascending">名称升序（A→Z）</string>
    <string name="action_folderselector_sort_descending">名称降序（Z→A）</string>
    <string name="action_folderselector_sort_default">默认排序</string>
    <string name="action_folderselector_reset_default">恢复默认路径</string>
    <string name="dialog_button_positive">确定</string>
    <string name="dialog_button_negative">取消</string>
    <string name="dialog_button_skip">跳过</string>
    <string name="dialog_button_continue">继续</string>
    <string name="activity_main_loading">正在加载</string>
    <string name="activity_folder_selector_initial_failed">不能初始化导出路径，请检查并重试</string>
    <string name="activity_folder_selector_title">选择路径</string>
    <string name="activity_folder_selector_current">当前路径:</string>
    <string name="activity_folder_selector_att">请务必选择正确可读写的媒体存储路径，否则会导致应用无法导出！</string>
    <string name="activity_folder_selector_saved_font">已更改APK导出路径至 </string>
    <string name="activity_folder_selector_invalid_pathname">请输入有效的字符</string>
    <string name="activity_folder_selector_invalid_foldername">名称中包含非法字符</string>
    <string name="activity_folder_selector_folder_already_exists">已存在重名文件夹</string>
    <string name="activity_folder_selector_storage_title">存储</string>
    <string name="copytask_apk_current">正在复制到</string>
    <string name="copytask_zip_current">正在压缩</string>
    <string name="dialog_filename_title">导出规则</string>
    <string name="dialog_filename_apk_att">APK命名规则</string>
    <string name="dialog_filename_zip_att">ZIP命名规则</string>
    <string name="dialog_filename_variables">插入变量</string>
    <string name="dialog_filename_button_appname">应用名称(?N)</string>
    <string name="dialog_filename_button_packagename">包名(?P)</string>
    <string name="dialog_filename_button_version">版本(?V)</string>
    <string name="dialog_filename_button_versioncode">版本号(?C)</string>
    <string name="dialog_filename_preview_appname">示例应用</string>
    <string name="dialog_filename_preview_packagename">com.example</string>
    <string name="dialog_filename_preview_version">1.0</string>
    <string name="dialog_filename_preview_versioncode">1</string>
    <string name="dialog_filename_toast_blank">命名规则不能为空</string>
    <string name="dialog_filename_warn_no_variables">注意:没有输入变量，这会导致多选导出无法正常导出文件！</string>
    <string name="zip_level_att">ZIP压缩级别</string>
    <string name="zip_level_default">默认</string>
    <string name="zip_level_stored">存储</string>
    <string name="zip_level_low">低</string>
    <string name="zip_level_normal">普通</string>
    <string name="zip_level_high">高</string>
    <string name="preview">预览</string>
    <string name="share">分享</string>
    <string name="attention">提示</string>
    <string name="dialog_sort_default">默认</string>
    <string name="dialog_sort_ascending_appname">按名称升序（从A到Z）</string>
    <string name="dialog_sort_descending_appname">按名称降序（从Z到A）</string>
    <string name="dialog_sort_ascending_appsize">按大小升序（从小到大）</string>
    <string name="dialog_sort_descending_appsize">按大小降序（从大到小）</string>
    <string name="dialog_sort_ascending_date">按安装日期升序（从旧到新）</string>
    <string name="dialog_sort_descending_date">按安装日期降序（从新到旧）</string>
    <string name="text_hint_searchview">搜索内容</string>
    <string name="hint_filename_apk">输入apk命名规则</string>
    <string name="hint_filename_zip">输入zip命名规则</string>
    <string name="text_appinst">点击相应条目来导出应用</string>
    <string name="text_showsysapp">显示系统应用</string>
    <string name="text_nofolder">此目录没有子文件夹</string>
    <string name="text_loading">正在加载</string>
    <string name="hint_newfolder">输入文件夹名称</string>
    <string name="button_selectall">全选</string>
    <string name="button_deselectall">全不选</string>
    <string name="button_extract">导出</string>
    <string name="button_share">分享</string>
    <string name="toast_request_rw_permission">请为本应用授予存储读写权限</string>
    <string name="dialog_appdetail_selectable_extract">导出</string>
    <string name="dialog_appdetail_selectable_share">分享</string>
    <string name="dialog_appdetail_selectable_detail">应用详情</string>
    <string name="dialog_storage_notenough_title">存储空间不足</string>
    <string name="dialog_storage_notenough_message">存储空间不足，请清理部分存储空间后重试。</string>
    <string name="dialog_appdetail_text_versioncode">Version Code：</string>
    <string name="dialog_appdetail_text_lastupdatetime">安装（更新）时间：</string>
    <string name="dialog_appdetail_text_appsize">应用大小：</string>
    <string name="dialog_appdetail_text_minsdkversion">最低要求API：</string>
    <string name="dialog_extract_multi_has_data_obb">检测到部分应用含有Data和Obb数据。\n勾选下面的选项，将会把含有Data或Obb数据的应用打包成zip导出。\n或者不勾选任何项，将会直接导出APK。</string>
    <string name="dialog_about_title">ApkExport</string>
    <string name="dialog_about_message">\n这是一个快速导出或者分享本地已安装APP的小工具。\n\n
        点击“分享”，可以使用支持分享的应用例如蓝牙、QQ面对面快传等来分享已选择的应用。\n\n
    勾选导出Data或者Obb选项后，会将应用APK和Data或Obb数据打包成zip导出。\n\n
        </string>
    <string name="dialog_firstuse_title">提示</string>
    <string name="dialog_firstuse_message">所有导出的应用将会以“包名+版本号”的方式命名并默认保存在“存储/Backup”路径下。\n\n导出路径可自行更改。</string>
    <string name="new_folder">新建文件夹</string>
    <string name="detailed_information">详细信息</string>
    <string name="varsion">版本号：</string>
</resources>
