<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.tokyonth.apkextractor.activity.Main" >
    
    <item
        android:id="@+id/action_search"
        android:orderInCategory="0"
        android:icon="@drawable/ic_menu_search"
        app:showAsAction="always"
        android:title="@string/action_search"/>
    
    <item
        android:id="@+id/action_sort"
        android:orderInCategory="1"
        android:icon="@drawable/ic_menu_sort"
        app:showAsAction="always"
        android:title="@string/action_sort"/>
    
     <item
        android:id="@+id/action_settings"
        android:orderInCategory="2"
        app:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/action_about"
        android:orderInCategory="3"
        app:showAsAction="never"
        android:title="@string/action_about"/>

</menu>
