<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/dialog_filename_apk_att"
            android:textColor="@color/color_att"
            android:textSize="15sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/filename_apk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_toLeftOf="@+id/filename_apk_end"
                android:hint="@string/hint_filename_apk"
                android:singleLine="true" />

            <TextView
                android:id="@+id/filename_apk_end"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical"
                android:text=".apk"
                android:textColor="@color/color_text_black"
                android:textSize="16sp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/filename_apk_warn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="3dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:src="@drawable/ic_icon_warn" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="3dp"
                android:text="@string/dialog_filename_warn_no_variables"
                android:textColor="@color/color_text_darkred"
                android:textSize="9sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/dialog_filename_zip_att"
            android:textColor="@color/color_att"
            android:textSize="15sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/filename_zip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_toLeftOf="@+id/filename_zip_end"
                android:hint="@string/hint_filename_zip"
                android:singleLine="true" />

            <TextView
                android:id="@+id/filename_zip_end"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical"
                android:text=".zip"
                android:textColor="@color/color_text_black"
                android:textSize="16sp" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/filename_zip_warn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="3dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:src="@drawable/ic_icon_warn" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="3dp"
                android:text="@string/dialog_filename_warn_no_variables"
                android:textColor="@color/color_text_darkred"
                android:textSize="9sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/zip_level_att"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:text="@string/zip_level_att"
                android:textColor="@color/color_att"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/spinner_zip_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@+id/zip_level_att" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/dialog_filename_variables"
            android:textColor="@color/color_att" />

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:layout_marginTop="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/filename_connector"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/divider"
                    android:text="-" />

                <Button
                    android:id="@+id/filename_upderline"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/divider"
                    android:text="_" />

                <Button
                    android:id="@+id/filename_appname"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:background="@color/divider"
                    android:text="@string/dialog_filename_button_appname" />

                <Button
                    android:id="@+id/filename_packagename"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:background="@color/divider"
                    android:text="@string/dialog_filename_button_packagename" />

                <Button
                    android:id="@+id/filename_version"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:background="@color/divider"
                    android:text="@string/dialog_filename_button_version" />

                <Button
                    android:id="@+id/filename_versioncode"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:background="@color/divider"
                    android:text="@string/dialog_filename_button_versioncode" />
            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/filename_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="15dp"
            android:text="@string/preview"
            android:textColor="@color/color_att"
            android:textSize="15sp" />

    </LinearLayout>

</ScrollView>
