<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/share_mode_direct"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@+id/share_mode_direct_ra"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share_mode_direct"
                android:textColor="@color/color_text_black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share_mode_direct_att"
                android:textSize="11sp" />
        </LinearLayout>

        <RadioButton
            android:id="@+id/share_mode_direct_ra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:clickable="false"
            android:focusable="false" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="#dddddd" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/share_mode_after_extract"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@+id/share_mode_after_extract_ra"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share_mode_after_extract"
                android:textColor="@color/color_text_black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share_mode_after_extract_att"
                android:textSize="11sp" />
        </LinearLayout>

        <RadioButton
            android:id="@+id/share_mode_after_extract_ra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:clickable="false"
            android:focusable="false" />
    </RelativeLayout>

</LinearLayout>
