<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/app_detail_icon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:layout_below="@id/app_detail_icon"
            android:id="@+id/app_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginTop="16dp"
            android:textSize="18dp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_below="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:textSize="12sp"
            android:textColor="@color/colorAccent"
            android:text="@string/detailed_information"/>

        <TextView
            android:id="@+id/dialog_appdetail_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll1"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="#dddddd" />

        <RelativeLayout
            android:layout_marginTop="8dp"
            android:id="@+id/dialog_appdetail_area_extract"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:id="@+id/dialog_appdetail_area_extract_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:src="@drawable/ic_icon_extract" />

            <TextView
                android:id="@+id/dialog_appdetail_area_extract_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@+id/dialog_appdetail_area_extract_img"
                android:text="@string/dialog_appdetail_selectable_extract"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/dialog_appdetail_extract_extra_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <ProgressBar
                    android:id="@+id/dialog_appdetail_extract_extra_pb"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:visibility="visible" />

                <com.tokyonth.apkextractor.widget.RoundCheckBox
                    android:id="@+id/dialog_appdetail_extract_data_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:enabled="false"
                    android:focusable="false"
                    android:text="Data"
                    android:visibility="gone" />

                <com.tokyonth.apkextractor.widget.RoundCheckBox
                    android:id="@+id/dialog_appdetail_extract_obb_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:focusable="false"
                    android:text="Obb"
                    android:visibility="gone" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/dialog_appdetail_area_share"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:id="@+id/dialog_appdetail_area_share_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:src="@drawable/ic_icon_share" />

            <TextView
                android:id="@+id/dialog_appdetail_area_share_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@+id/dialog_appdetail_area_share_img"
                android:text="@string/dialog_appdetail_selectable_share"
                android:textSize="16sp" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/dialog_appdetail_area_detail"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:id="@+id/dialog_appdetail_area_detail_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:src="@drawable/ic_icon_detail" />

            <TextView
                android:id="@+id/dialog_appdetail_area_detail_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@+id/dialog_appdetail_area_detail_img"
                android:text="@string/dialog_appdetail_selectable_detail"
                android:textSize="16sp" />


        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
